# update_telemetry_reporter

./: BUILD.ps1  Cargo.toml  README.md  build.rs  metrics.yaml  pings.yaml  sample.json  tags.yaml
src/: glean_config.rs  glean_telemetry.rs  lib.rs  main.rs  ping_uploader.rs
