[package]
name = "update_telemetry_reporter"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
ureq = { version = "2.12", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
glean = "62.0"
env_logger = "0.11"
log = "0.4"

[build-dependencies]
glean-build = { git = "https://github.com/mozilla/glean" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
