[package]
name = "update_telemetry_reporter"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
minreq = { version = "2.13.0", features = ["https-rustls"] }
glean = "62.0"
env_logger = "0.11"
log = "0.4"

[build-dependencies]
glean-build = { git = "https://github.com/mozilla/glean" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
