[package]
name = "update_telemetry_reporter"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
minreq = { version = "2.13.0", features = ["https-native"] }
glean = "62.0"

[build-dependencies]
glean-build = { git = "https://github.com/mozilla/glean" }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
codegen-units = 1
